[gd_scene load_steps=10 format=3 uid="uid://30vigruyl1u8"]

[ext_resource type="Texture2D" uid="uid://drv2yvqyelnkb" path="res://game/shared/graphics/images/sprite sheets/sprite_sheet_winning_animation.png" id="1_bjtid"]
[ext_resource type="Script" path="res://game/level/animations.gd" id="1_kv4e0"]
[ext_resource type="Texture2D" uid="uid://devomnujdn5pj" path="res://game/shared/graphics/images/sprite sheets/sprite_sheet_losing_animation.png" id="2_4pxrq"]

[sub_resource type="Animation" id="Animation_3pn8e"]
length = 0.001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u8huv"]
resource_name = "winning"
length = 5.0
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 119]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fj7jl"]
_data = {
"RESET": SubResource("Animation_3pn8e"),
"winning": SubResource("Animation_u8huv")
}

[sub_resource type="Animation" id="Animation_ujscq"]
length = 0.001
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1jl2t"]
resource_name = "losing"
length = 6.75
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 161]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lblpr"]
_data = {
"RESET": SubResource("Animation_ujscq"),
"losing": SubResource("Animation_1jl2t")
}

[node name="Animations" type="Node2D"]
script = ExtResource("1_kv4e0")

[node name="WinningAnimation" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
texture = ExtResource("1_bjtid")
hframes = 120

[node name="AnimationPlayerWinning" type="AnimationPlayer" parent="WinningAnimation"]
libraries = {
"": SubResource("AnimationLibrary_fj7jl")
}

[node name="LosingAnimation" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
texture = ExtResource("2_4pxrq")
hframes = 162

[node name="AnimationPlayerLosing" type="AnimationPlayer" parent="LosingAnimation"]
libraries = {
"": SubResource("AnimationLibrary_lblpr")
}

[connection signal="animation_finished" from="WinningAnimation/AnimationPlayerWinning" to="." method="_on_animation_player_winning_finished"]
[connection signal="animation_finished" from="LosingAnimation/AnimationPlayerLosing" to="." method="_on_animation_player_losing_finished"]
